module now arg when creating channel, start work on having multiple queues